Fixes #1618 ClayCSS Custom Checkbox/Radio up `z-index` on `.custom-control-input` so it doesn't lose focus when you decide not to click it

--- a/packages/clay-css/src/scss/components/_cards.scss
+++ b/packages/clay-css/src/scss/components/_cards.scss
@@ -275,7 +275,7 @@
 	}
 
 	.custom-control-input {
-		z-index: 1;
+		z-index: 2;
 	}
 
 	.custom-control-label {
